# litegen

./: .env.deploy.template  .gitignore  404.html  Dockerfile  LICENSE  README.md  _redirects  deploy.js  docker-compose.yml  en.html  en.txt  es.html  es.txt  index.html  litegen.example.yaml  openapi.json  package-lock.json  package.json  robots.txt  sitemap.xml
litegen-core/: .env.example  Cargo.toml
litegen-core/migrations/postgres/: 20240101000001_initial.sql  20240101000002_api_key_quota.sql  20240101000003_generations.sql  20240101000004_audit_log.sql  20240101000005_webhook_deliveries.sql  20240101000006_request_artifacts.sql  20240101000007_users.sql  20240101000008_multitenant.sql  20240101000009_pg_timestamptz.sql  20240101000010_app_storage.sql  20240101000011_generations_cost_usd_to_float8.sql
litegen-core/migrations/sqlite/: 20240101000001_initial.sql  20240101000002_api_key_quota.sql  20240101000003_generations.sql  20240101000004_audit_log.sql  20240101000005_webhook_deliveries.sql  20240101000006_request_artifacts.sql  20240101000007_users.sql  20240101000008_multitenant.sql  20240101000010_app_storage.sql
litegen-core/src/: lib.rs  main.rs  observability.rs
litegen-core/src/api/: metrics.rs  mod.rs  openapi.rs
litegen-core/src/api/handlers/: account.rs  auth_password.rs  mod.rs  oauth.rs  orgs.rs  users.rs
litegen-core/src/api/handlers/orgs/: tests.rs
litegen-core/src/api/middleware/: auth_tests.rs  backpressure.rs  e2e_tests.rs  mod.rs  rate_limit.rs  session_auth_tests.rs  validator.rs  validator_tests.rs
litegen-core/src/auth/: lockout.rs  mod.rs  oauth.rs  password.rs  permissions.rs  secrets.rs  tokens.rs
litegen-core/src/capabilities/: loader.rs  loader_tests.rs  mod.rs  registry.rs  schema.rs  schema_tests.rs
litegen-core/src/config/: mod.rs
litegen-core/src/db/: mod.rs  postgres.rs  postgres_tests.rs  sqlite.rs  sqlite_tests.rs  trait_def.rs
litegen-core/src/providers/: mod.rs
litegen-core/src/providers/auth/: kling_jwt.rs  mod.rs  sigv4.rs  tc3.rs
litegen-core/src/providers/image/: bedrock.rs  bfl.rs  bytedance.rs  fal.rs  google.rs  hunyuan.rs  ideogram.rs  kling.rs  leonardo.rs  luma.rs  minimax.rs  mock.rs  mod.rs  openai.rs  recraft.rs  replicate.rs  runway.rs  stability.rs  visual_mock.rs
litegen-core/src/providers/video/: bedrock.rs  bytedance.rs  fal.rs  google.rs  hunyuan.rs  kling.rs  leonardo.rs  luma.rs  minimax.rs  mock.rs  mod.rs  openai.rs  pixverse.rs  replicate.rs  runway.rs  vidu.rs  visual_mock.rs
litegen-core/src/proxy/: cache.rs  circuit_breaker.rs  circuit_breaker_tests.rs  materializer.rs  materializer_tests.rs  mod.rs  poller.rs  registry.rs  router.rs  router_tests.rs  storage.rs  webhook.rs
litegen-core/src/types/: mod.rs
litegen-core/src/util/: slug.rs
litegen-core/tests/: app_storage_db.rs  live_providers.rs  multitenant_api.rs  unit_tests.rs
sdks/python/: .gitignore  README.md  codegen.yml  pyproject.toml
sdks/python/examples/: generate_image.py  generate_video.py
sdks/python/litegen/: __init__.py  async_client.py  client.py  errors.py  polling.py
sdks/python/litegen/_generated/: __init__.py
sdks/python/litegen/_generated/api/account/: get_account.py  list_sessions.py  patch_account.py  revoke_session.py
sdks/python/litegen/_generated/api/admin/: clear_cache.py  create_api_key.py  list_api_keys.py  revoke_api_key.py
sdks/python/litegen/_generated/api/applications/: create_app.py  create_provider_credential.py  delete_app.py  delete_app_storage.py  delete_provider_credential.py  get_app.py  get_app_storage.py  list_apps.py  list_provider_credentials.py  patch_app.py  put_app_storage.py
sdks/python/litegen/_generated/api/auth/: auth_config.py  csrf_token.py  github_callback.py  github_start.py  google_callback.py  google_start.py  login.py  logout.py  me.py  oauth_redirect.py  password_reset_confirm.py  signup.py  (+1 more)
sdks/python/litegen/_generated/models/: __init__.py  accept_invitation_request.py  account_user.py  add_member_request.py  api_key.py  api_key_created_response.py  api_key_entry.py  api_key_info.py  api_key_list_response.py  app_storage_info.py  application.py  auth_config_response.py  auth_response.py  base_generation_request.py  cache_cleared_response.py  cache_config.py  cache_status.py  capability_media_type.py  capability_model_pricing.py  cost_estimate.py  cost_source.py  create_api_key_request.py  create_app_request.py  create_org_request.py  create_provider_credential_request.py  csrf_response.py  deployment.py  error_detail.py  error_response.py  generation_status.py  health_response.py  image_generation_request.py  image_generation_response.py  image_result.py  invitation.py  invitation_view.py  invite_request.py  invite_response.py  latency_percentiles.py  liveness_response.py  (+64 more)
sdks/python/tests/: test_client.py  test_contract.py  test_polling.py
(+366 files in other folders)
