[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "litegen"
version = "0.1.0"
description = "First-party Python SDK for LiteGen — universal AI image & video generation proxy."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "LiteGen" }]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.5",
    "attrs>=23.0",
    "python-dateutil>=2.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["litegen"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
