[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "litegen-sdk"
version = "0.0.1"
description = "First-party Python SDK for LiteGen — universal AI image & video generation proxy."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "LiteGen" }]
keywords = ["litegen", "ai", "image-generation", "video-generation", "sdk"]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.5",
    "attrs>=23.0",
    "python-dateutil>=2.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "mypy>=1.10",
]

[project.urls]
Homepage = "https://litegen.ai"
Repository = "https://github.com/visgotti/litegen-first"

[tool.hatch.build.targets.wheel]
packages = ["litegen"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
